--- a/NER/topic_model.ipynb
+++ b/NER/topic_model.ipynb
@@ -96,6 +96,7 @@
     "# pip install pyldavis\n",
     "\n",
     "# -*- coding:utf-8 -*-\n",
+    "# 20200 /SSD2/jack/pythonEnv/python2/bin/jupyter notebook \n",
     "\n",
     "import pandas as pd\n",
     "df = pd.read_csv(\"cleaned.csv\")\n",
